@@ -2,6 +2,7 @@
 #
 # Includes:
 #   ManageMessage
+#   ManageVariable
 #
 # Defines following variables:
 #
@@ -59,6 +60,29 @@
 #         + ERROR_MSG errorMessage: Error message to be append.
 #         + ERROR_VAR errorVar: Variable to be set as 1 when not found.
 #
+#   MANAGE_FILE_CACHE(<var> <file> [EXPIRY_SECONDS <expirySecond>]
+#     [CACHE_DIR <dir>] [ERROR_VAR errVar]
+#     COMMAND <cmd ...>
+#   )
+#     - Return the output of a program in cache, 
+#        and update the cache if expired, or create a cache if not exist.
+#       * Parameter:
+#         + var: The variable the stores the content of the cache file.
+#         + file: File to be processed. 
+#         + EXPIRY_SECONDS expirySecond: (Optional) Seconds 
+#           before the file expired.
+#           If not specified, it will use the value 
+#           LOCAL_CACHE_EXPIRY in cmake-fedora.conf,
+#           or 259200 (3 days).
+#         + CACHE_DIR dir: (Optional) Directory of <file>.
+#           If not specified, it will use the value 
+#           LOCAL_CACHE_DIR in cmake-fedora.conf,
+#           or $ENV{HOME}/.cache/cmake-fedora .
+#         + ERROR_VAR errorVar: (Optional) Variable to be set as 1 
+#           If not specified, it will use ${var}_ERROR
+#         + COMMAND <cmd ...>: Command for getting output.
+#           
+#
 #   MANAGE_FILE_EXPIRY(<var> <file> <expirySecond>)
 #     - Tell whether a file is expired in given.
 #       A file is deemed as expired if (currenTime - mtime) is greater
@@ -67,7 +91,7 @@
 #         + var: The variable that returns the file expiry status.
 #           Valid status: ERROR, NOT_FOUND, EXPIRED, NOT_EXPIRED.
 #         + file: File to be processed.
-#         + expirySecond: Seconds should the file last.
+#         + expirySecond: Seconds before the file expired.
 #
 # Defines following macros:
 #   MANAGE_FILE_INSTALL(<fileType>
@@ -101,6 +125,7 @@ IF(NOT DEFINED _MANAGE_FILE_CMAKE_)
        	"LIB" "LIBEXEC"
 	)
     INCLUDE(ManageMessage)
+    INCLUDE(ManageVariable)
 
     MACRO(_MANAGE_FILE_SET_FILE_INSTALL_LIST fileType)
 	SET(FILE_INSTALL_${fileType}_LIST "${FILE_INSTALL_${fileType}_LIST}"
@@ -275,6 +300,68 @@ IF(NOT DEFINED _MANAGE_FILE_CMAKE_)
 	    )
     ENDFUNCTION(MANAGE_CMAKE_FEDORA_CONF var)
 
+    FUNCTION(MANAGE_FILE_CACHE var file)
+	SET(_validOptions "CACHE_DIR" 
+	    "EXPIRY_SECONDS" "ERROR_VAR" "COMMAND")
+	VARIABLE_PARSE_ARGN(_o _validOptions ${ARGN})
+	IF(NOT DEFINED _o_ERROR_VAR)
+	    SET(_o_ERROR_VAR "${var}_ERROR")
+	ENDIF(NOT DEFINED _o_ERROR_VAR)
+	MANAGE_CMAKE_FEDORA_CONF(_cmake_fedora_conf
+	    VERBOSE_LEVEL ${M_OFF}
+	    ERROR_MSG "Failed to find cmake-fedora.conf"
+	    )
+	SET(HOME "$ENV{HOME}")
+	IF(${_cmake_fedora_conf})
+	    SETTING_FILE_GET_ALL_VARIABLES(${_cmake_fedora_conf})
+	ENDIF(${_cmake_fedora_conf})
+	SET(_toRun TRUE)
+	IF(NOT DEFINED LOCAL_CACHE)
+	    SET(LOCAL_CACHE 1)
+	ENDIF(NOT DEFINED LOCAL_CACHE)
+	IF(LOCAL_CACHE)
+	    IF(NOT _o_CACHE_DIR)
+		IF(LOCAL_CACHE_DIR)
+		    SET(_o_CACHE_DIR ${LOCAL_CACHE_DIR})
+		ELSE(LOCAL_CACHE_DIR)
+		    SET(_o_CACHE_DIR "${HOME}/.cache/cmake-fedora")
+		ENDIF(LOCAL_CACHE_DIR)
+	    ENDIF(NOT _o_CACHE_DIR)
+	    IF(NOT _o_EXPIRY_SECONDS)
+		IF(LOCAL_CACHE_EXPIRY)
+		    SET(_o_EXPIRY_SECONDS ${LOCAL_CACHE_EXPIRY})
+		ELSE(LOCAL_CACHE_EXPIRY)
+		    SET(_o_EXPIRY_SECONDS 259200) # 3 days
+		ENDIF(LOCAL_CACHE_EXPIRY)
+	    ENDIF(NOT  _o_EXPIRY_SECONDS)
+	    IF(NOT EXISTS ${_o_CACHE_DIR})
+		FILE(MAKE_DIRECTORY ${_o_CACHE_DIR})
+	    ENDIF(NOT EXISTS ${_o_CACHE_DIR})
+
+	    SET(_cacheFile "${_o_CACHE_DIR}/${file}")
+	    MANAGE_FILE_EXPIRY(_isExpired ${_cacheFile} ${_o_EXPIRY_SECONDS})
+	    IF(_isExpired STREQUAL "NOT_EXIST")
+		SET(_toRun TRUE)
+	    ELSEIF(_isExpired STREQUAL "NOT_EXPIRED")
+		SET(_toRun FALSE)
+	    ELSEIF(_isExpired STREQUAL "EXPIRED")
+		SET(_toRun TRUE)
+	    ELSE(_isExpired STREQUAL "NOT_EXIST")
+		M_MSG(${M_ERROR} "Failed on checking file expirary")
+	    ENDIF(_isExpired STREQUAL "NOT_EXIST")
+	ELSE(LOCAL_CACHE)
+	    SET(_cacheFile "/tmp/cmake_fedora_cache_${cache_file}")
+	ENDIF(LOCAL_CACHE)
+	IF(_toRun)
+	    EXECUTE_PROCESS(COMMAND ${_o_COMMAND}
+		OUTPUT_FILE ${_cacheFile}
+		OUTPUT_STRIP_TRAILING_WHITESPACE
+		)
+	ENDIF(_toRun)
+	FILE(STRINGS ${_cacheFile} _value)
+	SET(${var} "${_value}" PARENT_SCOPE)
+    ENDFUNCTION(MANAGE_FILE_CACHE var file)
+
     FUNCTION(MANAGE_FILE_EXPIRY var file expirySecond)
 	IF(EXISTS "${file}")
 	    EXECUTE_PROCESS(COMMAND stat --format "%Y" "${file}"
@@ -318,6 +405,6 @@ IF(NOT DEFINED _MANAGE_FILE_CMAKE_)
 	ENDIF( _t STREQUAL "/")
 	SET(${var} "${_s}")
     ENDMACRO(GIT_GLOB_TO_CMAKE_REGEX var glob)
-    
+ 
 ENDIF(NOT DEFINED _MANAGE_FILE_CMAKE_)
 
