@@ -2,7 +2,7 @@
 # Local Cache 
 
 LOCAL_CACHE=1
-LOCAL_CACHE_DIR=$HOME/.cache/cmake-fedora/
+LOCAL_CACHE_DIR=${HOME}/.cache/cmake-fedora/
 
 # How long should the cache be kept until update.
 # In seconds
